--- a/examples/Demo3.html
+++ b/examples/Demo3.html
@@ -24,7 +24,7 @@
   <link rel="stylesheet" type="text/css" href="../css/app-min.css">
   <link rel="stylesheet" type="text/css" href="../css/jsoneditor-min.css">
   <script type="text/javascript" src="../lib/jsoneditor-min.js"></script>
-  <script type="text/javascript" src="../lib/ace/ace-min.js"></script>
+  <script type="text/javascript" src="../lib/ace/ace.js"></script>
   <script type="text/javascript" src="../lib/app-min.js"></script>
 </head>
 
@@ -64,31 +64,6 @@
     </ul>
   </div>
 
-  <!-- TODO: info, links, faq -->
-  <!--
-<div class="info" style="display:none;">
-  JSON, or JavaScript Object Notation, is a lightweight text-based open standard
-  designed for human-readable data interchange. It is derived from the JavaScript
-  scripting language for representing simple data structures and associative arrays,
-  called objects. Despite its relationship to JavaScript, it is language-independent,
-  with parsers available for most languages.
-  The JSON format was originally specified by Douglas Crockford, and is described
-  in RFC 4627. The official Internet media type for JSON is application/json.
-  The JSON filename extension is .json.
-  The JSON format is often used for serializing and transmitting structured data
-  over a network connection. It is used primarily to transmit data between a server
-  and web application, serving as an alternative to XML.
-  <br><br>
-  From <a target="_blank" href="http://en.wikipedia.org/wiki/Json">Wikipedia</a>
-</div>
-
-<div class="links" style="display:none;">
-  <a target="_blank" href="http://json.org/">http://json.org/</a><br>
-  <a target="_blank" href="http://en.wikipedia.org/wiki/Json">http://en.wikipedia.org/wiki/Json</a><br>
-</div>
-
-<div class="faq" style="display:none;"></div>
-  -->
 </div>
 
 <div id="auto">
@@ -125,17 +100,13 @@
 
 <div id="footer">
   <div id="footer-inner">
-    <a href="http://jsoneditoronline.org" class="footer">JSON Editor Online 2.3.6</a>
+    <a href="http://vbooking.github.io/" class="footer">wchaowu blog</a>
     &bull;
-    <a href="HISTORY.md" target="_blank" class="footer">History</a>
+    <a href="http://www.weibo.com/wchaowu/" target="_blank" class="footer">weibo</a>
     &bull;
-    <a href="https://github.com/josdejong/jsoneditor/" target="_blank" class="footer">Sourcecode</a>
-    &bull;
-    <a href="https://github.com/josdejong/jsoneditor/issues" target="_blank" class="footer">Report a bug</a>
-    &bull;
-    <a href="datapolicy.txt" target="_blank" class="footer">Data policy</a>
-    &bull;
-    <a href="NOTICE" target="_blank" class="footer">Copyright 2011-2013 Jos de Jong</a>
+    <a href="https://github.com/wchaowu/jsoneditor" target="_blank" class="footer">Sourcecode</a>
+    &bull;   
+    <a href="NOTICE" target="_blank" class="footer">Copyright 2011-2013 wchaowu</a>
   </div>
 </div>
 
